# waybar-module-pomodoro

./: .envrc  Cargo.toml  flake.nix
src/: cli.rs  control_cli.rs  lib.rs  main.rs
src/models/: config.rs  message.rs
src/services/: cache.rs  mod.rs  module.rs  timer.rs
src/utils/: consts.rs
